--- a/Challange0.ipynb
+++ b/Challange0.ipynb
@@ -6269,7 +6269,7 @@
    "metadata": {},
    "source": [
     "- Education-num shows that probably it woule be worth creating bin like 1-8, 9-12, 13-14, 15-16. \n",
-    "- "
+    "- Age also seems interesting the 0 ratio increases with the age."
    ]
   },
   {
@@ -6739,7 +6739,7 @@
     "## training on all training variales\n",
     "Some extra info:\n",
     " - balance classes, since it is skewed towards 1\n",
-    " - 3 fold cross validation\n",
+    " - 3 fold cross validation for model generalization\n",
     " - grid search on important params\n",
     " - auto categorical value transformation (one-hot encoding, ....)\n"
    ]
@@ -7039,6 +7039,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Interestingly UA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Future work\n",
     "\n",
     "- More exploration\n",
@@ -7051,7 +7058,7 @@
     "- More models\n",
     " - basemodel: at least random guest with the distribution of labels.\n",
     " - check if fewer variables are sufficient\n",
-    " - Trying: simple logistic regression (with interaction), random forest.\n",
+    " - Trying: simple logistic regression (with interaction), random forest, ...\n",
     " "
    ]
   },
