--- a/Challange1.ipynb
+++ b/Challange1.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -819,19 +819,19 @@
       "img file: cat_41.jpg\n",
       "img file: cat_912.jpg\n",
       "img file: cat_161.jpg\n",
-      "img file: cat_791.jpg\n",
-      "img file: cat_401.jpg\n",
-      "img file: dog_905.jpg\n",
-      "img file: cat_449.jpg\n",
-      "img file: cat_888.jpg\n",
-      "img file: cat_276.jpg\n",
-      "img file: cat_362.jpg\n"
+      "img file: cat_791.jpg\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "img file: cat_401.jpg\n",
+      "img file: dog_905.jpg\n",
+      "img file: cat_449.jpg\n",
+      "img file: cat_888.jpg\n",
+      "img file: cat_276.jpg\n",
+      "img file: cat_362.jpg\n",
       "img file: cat_681.jpg\n",
       "img file: dog_649.jpg\n",
       "img file: cat_57.jpg\n",
@@ -1216,7 +1216,13 @@
       "img file: cat_465.jpg\n",
       "img file: dog_11.jpg\n",
       "img file: cat_737.jpg\n",
-      "img file: dog_226.jpg\n",
+      "img file: dog_226.jpg\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "img file: dog_678.jpg\n",
       "img file: dog_915.jpg\n",
       "img file: dog_254.jpg\n",
@@ -1224,13 +1230,7 @@
       "img file: dog_53.jpg\n",
       "img file: cat_25.jpg\n",
       "img file: cat_830.jpg\n",
-      "img file: dog_527.jpg\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "img file: dog_527.jpg\n",
       "img file: dog_183.jpg\n",
       "img file: cat_255.jpg\n",
       "img file: cat_52.jpg\n",
@@ -1608,20 +1608,20 @@
       "img file: cat_207.jpg\n",
       "img file: cat_638.jpg\n",
       "img file: cat_92.jpg\n",
-      "img file: dog_141.jpg\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "img file: dog_141.jpg\n",
       "img file: dog_187.jpg\n",
       "img file: dog_252.jpg\n",
       "img file: dog_914.jpg\n",
       "img file: cat_305.jpg\n",
       "img file: cat_107.jpg\n",
       "img file: cat_231.jpg\n",
-      "img file: cat_561.jpg\n",
+      "img file: cat_561.jpg\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "img file: cat_12.jpg\n",
       "img file: dog_708.jpg\n",
       "img file: cat_205.jpg\n",
@@ -1996,16 +1996,16 @@
       "img file: dog_717.jpg\n",
       "img file: dog_434.jpg\n",
       "img file: dog_874.jpg\n",
-      "img file: cat_809.jpg\n"
+      "img file: cat_809.jpg\n",
+      "img file: cat_364.jpg\n",
+      "img file: dog_655.jpg\n",
+      "img file: dog_451.jpg\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "img file: cat_364.jpg\n",
-      "img file: dog_655.jpg\n",
-      "img file: dog_451.jpg\n",
       "img file: dog_523.jpg\n",
       "img file: cat_622.jpg\n",
       "img file: dog_672.jpg\n",
@@ -2090,6 +2090,7 @@
     }
    ],
    "source": [
+    "# Not a separate function for this task\n",
     "data_x = []\n",
     "data_y = []\n",
     "\n",
@@ -2431,9 +2432,44 @@
     "\n",
     "\n",
     "# Future work\n",
+    "- Don't read all the images in one step it can cause memory issues (model.fit_generator)\n",
     "- one more dense layer before output layer\n",
-    "- grid search on hyperparams, now they are fixed.\n",
+    "- grid search on hyperparams, now they are hard-coded.\n",
+    "- dropout\n",
     "- data augmentation\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Questions\n",
+    "\n",
+    "\n",
+    "### Why deep learning is suitable for the task?\n",
+    "\n",
+    "Because it's not clear what features human beings apply to classify images. Imagenet competition in 2012 showed that deep learning beats models with hand-crafted features. Deep neural networks are really good at learning features (mainly at perception level). Otherwise pre-trained neural network knowledge can be transfered, it's useful if you don't have enough data.\n",
+    "\n",
+    "### What kind of network architecture you would choose?\n",
+    "\n",
+    "Convolutional neural netowrk is a standard choice for computer vision classification tasks. It turnes out that it also has biological background (experiments with cats). Instead of handcrafting computer vision filters, they can be learned by the network. \n",
+    "However the complexity of CNN depends on the task you try to solve, I guess this task needs more complex CNN than for example CIFAR10 or MNIST. But complex CNN needs more data, so this case transfer learning comes to rescue.\n",
+    "\n",
+    "### How would you validate the model?\n",
+    "\n",
+    "If multiple models are tried out validation dataset is needed to be setup to validate the models on. Accuracy is one obvious metric to choose for model selection. At the end after having the best model, we also check the results on the test set.\n",
+    "\n",
+    "In my solution I chose early stopping that means if the results (accuracy) on validation set don't imporve (after some epochs) then we stop the training.\n",
+    "\n",
+    "\n",
+    "### How would you make the model robust?\n",
+    "- Longer training\n",
+    "- Data augmentation (mirroring, noise, ...)\n",
+    "- Gridsearch on hyperparams\n",
+    "\n",
+    "### How would solve the task if you have only so few examples to learn from?\n",
+    "\n",
+    "Hm. Actually this is what I did. Transfer learning. I applied inception v3 that was trained on 14 million images at ImageNet contest. Since the domain is similar I didn't introduce any extra dense layer, so I only replaced the original output layer with 2 neuron softmax layer."
    ]
   },
   {
