remove one output

--- a/Challange0.ipynb
+++ b/Challange0.ipynb
@@ -7039,7 +7039,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Interestingly UA"
+    "Interestingly AUC is a hight value, but the prediction on 0-s is just around 54%"
    ]
   },
   {
